# blockset

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cifar_lambda_run.sh  cold_start_inference.sh  cold_start_inference_hepmass.sh  copy_files.sh  exe  forest.capnp  inference.sh  lambda_conc.sh  newrun_copy.sh  newrun_inference.sh  newrun_pack.sh  newrunscript.sh  pack.sh  run_benchmarks.sh  run_cifar.sh  run_gbm_pack.sh  run_inference.sh  run_landsat_all.sh  run_pack.sh  runrun2.sh  runscript.sh  runscript_basic.sh  runscript_regression.sh  train_sklearn.sh
Python/: .example.py.swp  .inference.sh.swp  bindings.cpp  example.py  inference.sh  metadata.txt  notfoundBlocks_binstatblockthreads_-235264968intertwine_2batchsize_1.csv  notfoundBlocks_binstatblockthreads_1intertwine_2batchsize_1.csv  notfoundBlocks_binstatblockthreads_5328821intertwine_2batchsize_1.csv  notfoundlatency_binstatblockthreads_-235264968intertwine_2batchsize_1.csv  notfoundlatency_binstatblockthreads_1intertwine_2batchsize_1.csv  notfoundlatency_binstatblockthreads_5328821intertwine_2batchsize_1.csv  out  pack.sh  setup.py
Python/pyblockset.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
json/: DartConfiguration.tcl
lambda_exp/: read_and_predict.py  s3_predict.py  write_redis.py
models/: dtree.pkl  rf.pkl
redis_exp/: packed_model.txt  read_and_predict.py
scripts/: boxplot.py  boxplot_align.py  boxplot_block.py  boxplot_depth.py  boxplot_latency.py  cifar_depth_16.py  copy_files.py  copy_files_new.py  copy_files_single_dir.py  delete_files_new.py  gbm_sklearn.py  get_avg.py  get_avg_part.py  higgs_gbm.py  landsat_depth.py  skl_predict_baseline.py  sklearn_benchmark_script.py  train_and_save_sklearn.py  train_and_save_sklearn_higgs.py  train_and_save_sklearn_old.py  train_and_save_sklearn_susy.py  xgb_predict_baseline.py  xgb_train_baseline.py  xgboost_gbm.py
scripts/kdd_plot_scripts/: .aggregate.csv.swp  aggregate.csv  aggregate_bargraph.py  all_four_layout_boxplot.py  boxplot_depth_cifar.py  boxplot_layout_embedded_gbt.py  boxplot_layout_embedded_rf.py  boxplot_layout_gbt_classification.py  boxplot_layout_gbt_regression.py  boxplot_layout_higgs128.py  boxplot_layout_rf_classification.py  boxplot_layout_rf_regression.py
src/: .config.cpp.swp  MemoryMapped.cpp  MemoryMapped.h  bindings.cpp  config.cpp  config.h  json_reader.cpp  json_reader.h  main.cpp  node.h  packer.h  pacset_base.cpp  pacset_base.h  pacset_base_model.h  pacset_factory.cpp  pacset_factory.h  pacset_gb_classifier.h  pacset_gb_regressor.h  pacset_rf_classifier.h  pacset_rf_regressor.h  stat_node.h  utils.cpp  utils.h
(+205 files in other folders)
